After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 746208 - Regex search for open files is interrupted on every key stroke by modal dialog
Regex search for open files is interrupted on every key stroke by modal dialog
Status: RESOLVED FIXED
Product: system-monitor
Classification: Core
Component: general
git master
Other Linux
: Normal normal
: ---
Assigned To: System-monitor maintainers
System-monitor maintainers
Depends on:
Blocks:
 
 
Reported: 2015-03-14 14:14 UTC by Jiro Matsuzawa
Modified: 2015-03-15 15:21 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Screencast of this issue (249.92 KB, video/webm)
2015-03-14 14:16 UTC, Jiro Matsuzawa
  Details
0001-Don-t-display-an-error-dialog-when-open-files-regex (3.00 KB, patch)
2015-03-14 21:45 UTC, Benoît Dejean
committed Details | Review

Description Jiro Matsuzawa 2015-03-14 14:14:09 UTC
Details
---------
When you are typing some perl regular expressions to search for open files, you get a modal error dialog and are interrupted on every key stroke. The dialog blocks your typing and notifies your input is invalid, even if you have not finished yet. It seems that this problem is caused by the incremental search. 

I believe this is very annoying. It is better not to interrupt users' typing. 


Steps to Reproduce
-------------------
1. Select Search for Open Files in the App menu.
2. Enter '[' as a part of a valid pattern in the textbox for file names.
=> You get a modal error dialog


Build Version
---------------
% jhbuild info gnome-system-monitor | grep Install
Install version: 9041b27ecfe2b748cac9edd3208c0dbb9788bc4d
Install date: 2015-03-14 20:22:16
Comment 1 Jiro Matsuzawa 2015-03-14 14:16:42 UTC
Created attachment 299402 [details]
Screencast of this issue
Comment 2 Benoît Dejean 2015-03-14 21:45:29 UTC
Created attachment 299417 [details] [review]
0001-Don-t-display-an-error-dialog-when-open-files-regex

Nice catch. This is indeed annoying. Here's my take on this.
Comment 3 Robert Roth 2015-03-15 15:20:49 UTC
Review of attachment 299417 [details] [review]:

Thanks for the patch, pushed this into master, with a minor tweak, using GTK_STYLE_CLASS_ERROR instead of "error".
Comment 4 Robert Roth 2015-03-15 15:21:05 UTC
This problem has been fixed in the unstable development version. The fix will be available in the next major software release. You may need to upgrade your Linux distribution to obtain that newer version.