Don't display an error dialog when open files regex is invalid or incomplete (because user is still typing). Instead, set the search entry style to error.

https://bugzilla.gnome.org/show_bug.cgi?id=746208.